2021-10-22 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Middleware must provide the global TSFE object of type \TYPO3\CMS\Frontend\Controller\TypoScriptFrontendController

2021-02-19 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 10.4: replace $GLOBALS['TSFE']->getUniqueId($formName) by addition of bin2hex(random_bytes(16)) at the end of the form name. This however leads to a problem. The formname is an id which must be a fix name. So the form name will remain now unchanged.
    * Remove configuration option arrayReturnMode, because only a string must be returned to TYPO3.

2020-07-29 Franz Holzinger <franz@ttproducts.de>
    * move method calcDoublePostKey from class TypoScriptFrontendDataController into 
 JambageCom\TslibFetce\Utility\FormUtility 
    * move method checkDoublePostExist from class TypoScriptFrontendDataController into 
 JambageCom\TslibFetce\Utility\FormUtility 
 
2020-02-02 Franz Holzinger <franz@ttproducts.de>
    * bugfix: class JambageCom\TslibFetce\Hooks\FrontendHooks was not found

2020-01-05 Franz Holzinger <franz@ttproducts.de>
    * new feature: the method execNEWinsert must return the uid of the successfully inserted record and not the count of inserted records
    * use the Doctrine database interface instead of $GLOBALS["TYPO3_DB"]

2019-12-18 Franz Holzinger <franz@ttproducts.de>
    * compatibility for TYPO3 9 breaking 82162: replace constant TYPO3_DLOG by 
        isset($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_div.php']['devLog'])

2019-11-01 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.5.x

2018-11-25 Franz Holzinger <franz@ttproducts.de>
    * TYPO3 7: Do not replace \TYPO3\CMS\Core\TypoScript\TemplateService::sortedKeyList by \TYPO3\CMS\Core\Utility\ArrayUtility::filterAndSortByNumericKeys for TYPO3 7.6.

2018-08-26 Franz Holzinger <franz@ttproducts.de>